Imported style for sign up, sign in

--- a/koala-config.json
+++ b/koala-config.json
@@ -3,8 +3,8 @@
 	// The mappings of source directory and output directory
 	"mappings": [
 		{	
-			"src": "stylesheets",
-			"dest": "stylesheets"
+			"src": "path/to/source",
+			"dest": "path/to/output"
 		}
 	],
 
